--- a/IzmPortal/IzmPortal.Api/appsettings.json
+++ b/IzmPortal/IzmPortal.Api/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "PortalConnection": "Data Source=172.22.129.150;Database=PortalDB;Persist Security Info=True;User ID=sa;Password=Sc1907*/;Pooling=False;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Application Name=SQLServer Management Studio;Command Timeout=0",
+    "PersonalConnection": "Data Source=172.22.129.150;Database=PersonalDB;Persist Security Info=True;User ID=sa;Password=Sc1907*/;Pooling=False;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Application Name=SQLServer Management Studio;Command Timeout=0"
+  }
 }
