CP3.1: Application layer category DTOs and interfaces

--- a/IzmPortal/IzmPortal.Application/IzmPortal.Application.csproj
+++ b/IzmPortal/IzmPortal.Application/IzmPortal.Application.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\IzmPortal.Domain\IzmPortal.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="DTOs\Announcement\" />
+  </ItemGroup>
+
 </Project>
