--- a/IzmPortal/IzmPortal.Infrastructure/IzmPortal.Infrastructure.csproj
+++ b/IzmPortal/IzmPortal.Infrastructure/IzmPortal.Infrastructure.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\IzmPortal.Application\IzmPortal.Application.csproj" />
     <ProjectReference Include="..\IzmPortal.Domain\IzmPortal.Domain.csproj" />
   </ItemGroup>
 
