CP5: Auth completed (Identity, JWT, PersonalDB, PIN-based login & change-password)

--- a/IzmPortal/IzmPortal.Api/appsettings.json
+++ b/IzmPortal/IzmPortal.Api/appsettings.json
@@ -9,5 +9,12 @@
   "ConnectionStrings": {
     "PortalConnection": "Data Source=172.22.129.150;Database=PortalDB;Persist Security Info=True;User ID=sa;Password=Sc1907*/;Pooling=False;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Application Name=SQLServer Management Studio;Command Timeout=0",
     "PersonalConnection": "Data Source=172.22.129.150;Database=PersonalDB;Persist Security Info=True;User ID=sa;Password=Sc1907*/;Pooling=False;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Application Name=SQLServer Management Studio;Command Timeout=0"
+  },
+  "Jwt": {
+    "Key": "SUPER_SECRET_KEY_32_CHAR_MIN_SUAVI_CILO",
+    "Issuer": "IzmPortal",
+    "Audience": "IzmPortalUsers",
+    "ExpireMinutes": 60
   }
+
 }
