checkpoint: SuaviPortal Devam - Admin auth, menu, force password change, API handler

--- a/IzmPortal/IzmPortal.Admin/IzmPortal.Admin.csproj
+++ b/IzmPortal/IzmPortal.Admin/IzmPortal.Admin.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.15.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\IzmPortal.Application\IzmPortal.Application.csproj" />
   </ItemGroup>
 
